Fixed alignment issues with alerts.

--- a/BetterDiscordAddons/Themes/modern-discord.theme.source.css
+++ b/BetterDiscordAddons/Themes/modern-discord.theme.source.css
@@ -1153,8 +1153,6 @@
     order: 1;
 }
 
-
-
 /*Discord Notices*/
 #app-mount .app-1q1i1E .base-3dtUhz{
     flex-direction: column;
@@ -1162,9 +1160,13 @@
 }
 .app-2rEoOp .notice-3bPHh-, .noticeWrapper-8z511t{
     order: 99;
-    border-radius: 0;
-    max-width: calc(100vw - 240px) !important;
-    left: 0px;
+    border-radius: 0px !important;
+    max-width: 100vw !important;
+    left: 0;
+    right: 0;
+}
+.notice-3bPHh-.noticeWrapper-8z511t.updateNotice-2DjjHs.colorInfo-2URYW5 {
+
 }
 /*
 .notice-2X5hT5{
